--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Image Search. An API project for FreeCodeCamp's Backend Certification.",
   "main": "app.js",
   "engine": {
-    "node": "^4.4.2"
+    "node": "^6.7.0"
   },
   "scripts": {
     "start": "node app.js",
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/relwiwa/FCC-Image-Search#readme",
   "dependencies": {
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "mongodb": "^2.2.5"
+    "mongodb": "^2.2.10"
   }
 }
